4.2.0 (Unreleased)
------------------

SECURITY NOTE:

Before devpi-server 4.2.0 passwords were hashed with a very weak algorithm.
It's strongly recommended to change any passwords created before 4.2.0
after upgrading! The password salt and hashes are exposed via the /+changelog
URL used for replication. If you don't use replication you should block that
URL to avoid unnecessary exposure. If you use replication you should use client
side certificates or https with basic authentication to secure /+changelog.

- fix push to PyPI by skipping failing "register" step and adding additional
  fields in POST data on "file_upload".

- fix issue372: correctly set isolation_level for sqlite3 connections. This
  also fixes Python 3.6 compatibility.

- fix issue334: The event handler for the simple page cache failed when an
  index was deleted and a new replica tried to run the event hooks.

- fix issue314: Fetch external file on replica from original source if master
  is down.

- fix issue363: Replace weak password hashing with argon2 using passlib.
  Existing logins will be migrated on login.

- fix issue377: Add new ``--init`` option required to initialize a server
  directory. This prevents accidental use of wrong or empty ``--serverdir``.

-

-


4.1.1 (2016-10-14)
------------------

- when a project has no releases (only setup.py register ran) and it isn't
  whitelisted, then upstream releases will now be blocked as expected.

- Adjust event processing status messages and the times when they are shown:
  After 5 minutes of no event processing there will be a warning.
  After 30 minutes this will turn into a fatal status.
  After 1 hour of not being in sync there will be a warning.
  After 6 hours of desync the status turns fatal.

- handle sqlite3.NotSupportedError when the installed sqlite doesn't support
  URI filenames at all.


4.1.0 (2016-07-15)
------------------

- Try opening read only transactions in SQLite read only mode for better